<resources>
    <string name="app_name">tinko</string>
    <string name="logo">Logo</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="forgot">Forgot Password?</string>
    <string name="signup">Sign Up</string>
    <string name="firstname">First Name</string>
    <string name="surname">Surname</string>
    <string name="back">Return</string>
    <string name="logout">Logout</string>
    <string name="work">Work</string>
    <string name="leisure">Leisure</string>
    <color name="tinko_green">#2cb08b</color>
</resources>